client/src/components/Header/Header.scss
@use "../../styles/partials/colors" as *;
@use "../../styles/partials/fonts" as *;
@use "../../styles/partials/mixins" as *;
@use "../../styles/global.scss" as *;

.header {
  @include block-item(100%, 9.5rem);
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  background-color: $neutral-white;
  padding: 0 1.5rem;
  margin: 0 auto;
  box-shadow: $shadow-primary;
  position: relative;

  @include tablet {
    flex-direction: row;
    @include block-item(100%, 4.375rem);
    justify-content: space-between;
    padding: 0 3.375rem;
  }

  &__search-input {
    @include tablet {
      width: 8rem;
    }

      @include desktop {
        width: 13.5rem;
      }

      @include large-desktop {
        width: 17.5rem;
      }
    }

  &__sign-in-icon {
    @include block-item(1.5rem, 1.5rem);
    display: block;
    box-shadow: $shadow-primary;

    @include tablet {
      display: none;
    }
  }

  &__sign-in-txt {
    display: none;
    text-decoration: none;

    @include tablet {
      display: block;
      text-decoration: none !important;

      &:hover,
      &:visited,
      &:active {
        text-decoration: none !important;
      }
    }
  }

  &__login-container {
    text-decoration: none;
    @include btn-small;
    @include block-item(1.5rem, 2.75rem);
    display: flex;

    @include tablet {
      width: 10rem;
    }
  }

  &__login {
    text-decoration: none;
    @include btn-txt;
    display: block;
    align-items: center;
  }

  &__main-container {
    width: 100%;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    position: relative;

    @include tablet {
      flex-direction: column;
      display: flex;
      flex-direction: row;
      align-items: center;
      justify-content: space-between;
    }
  }

  &__logo-wrapper {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 0;
    border: 0.125rem solid transparent;
    transition: border 0.3s ease, padding 0.3s ease, border-radius 0.3s ease;
    position: absolute;
    left: 50%;
    transform: translateX(-50%);

    &:hover {
      @include borderGlowLogo();
      padding: 1rem;
      border-radius: 1rem;
    }

    &:active {
      .header__logo {
        transform: scale(0.95);
      }
    }

    @include tablet {
      position: absolute;
      left: 50%;
      transform: translateX(-50%);
    }
  }

  &__logo {
    @include block-item(8.375rem, 1.063rem);
    transition: transform 0.2s ease;
    cursor: pointer;
  }

  &__search-bar {
    display: none;

    @include tablet {
      display: flex;
      align-items: center;
      background-color: $neutral-white;
      border: solid $primary-light-blue;
      border-radius: .5rem;
      box-shadow: $shadow-primary;
      padding-right: .5rem;
      gap: .5rem;
      width: 12rem;
      left: 3.5rem;
      position: relative;
    }

    @include desktop {
      width: 18rem;
      padding-right: 1rem;
    }

    @include large-desktop {
      width: 22rem;
    }
  }

  &__user-icon {
    display: block;

    @include tablet {
      display: none;
    }
  }

  &__search-icon {
    @include block-item(2.75rem, 2.75rem);
    background: $button-light-gradient;
    border: .1rem solid $neutral-white;
    border-radius: .35rem;
    box-shadow: $shadow-primary;
  }

  &__magnifying-glass {
    left: .35rem;
    position: relative;
    top: .65rem;

    @include tablet {
      left: .75rem;
    }
  }

  &__icon-container {
    @include block-item(1.5rem, 1.875rem);
    left: -.4375rem;
    position: relative;
  }

  &__search-vector {
    @include block-item(1.1rem, 1.1rem);
    position: absolute;
    top: .625rem;

    @include desktop {
      @include block-item(1.1875rem, 1.1875rem);
    }
  }

  &__search-ellipse {
    @include block-item(.8rem, .8rem);
    border: .1094rem solid;
    border-color: $neutral-white;
    border-radius: .5rem;
    box-shadow: $shadow-primary;
    left: .625rem;
    position: absolute;
  }

  &__search-content {
    width: 4rem;
    align-items: flex-start;
    align-self: stretch;
    display: flex;
    flex: 1;
    flex-direction: column;
    flex-grow: 1;
    gap: .125rem;
    justify-content: center;

    @include desktop {
      width: 100%;
    }
  }

  &__search-input,
  &__search-input--mobile {
    font-family: $primary-font;
    font-size: .875rem;
    font-weight: 400;
    padding: .25rem;
    outline: none;
    border: none;
    color: $primary-light-blue;

    &::placeholder {
      color: $primary-light-blue;
    }

    &:focus {
      color: $primary-dark-blue;
      background-color: $neutral-white;
      border-radius: .35rem;
      box-shadow: $shadow-senary;
    }

    &:active {
      background-color: $primary-very-light-blue; 
    }
  }

  &__nav-container {
    display: flex;
    flex-direction: row;
    width: 100%;
    position: relative;

    @include desktop {
      padding-left: 1rem;
    }
  }

  &__menu-container {
    align-items: flex-start;
    background: $button-light-gradient;
    border-radius: .5rem;
    box-shadow: $shadow-primary;
    display: flex;
    align-items: center;
    padding: .5rem;
    border: 2px solid $neutral-white;
    height: 2.9375rem;
    cursor: pointer;
    transition: box-shadow 0.3s ease, transform 0.2s ease;

    @include tablet {
      margin-right: 1rem;
    }

    &:hover {
      box-shadow: 0 0 10px rgba($primary-medium-blue, 0.4), 0 0 10px rgba($primary-medium-blue, 0.3);
      border: 1px solid $neutral-white;
    }

    &:active {
      transform: scale(0.95);
    }

    @include desktop {
      margin-right: 2.0625rem;
    }
  }

  &__menu {
    @include block-item(1.5rem, 1.5rem);
    position: relative;
  }

  &__search-bar--mobile {
    display: flex;
    align-items: center;
    background-color: $neutral-white;
    border: solid $primary-light-blue;
    border-radius: .5rem;
    box-shadow: $shadow-primary;
    padding-right: 1.5rem;
    gap: 1.25rem;
    width: 100%;
    margin: 0 1rem;

    @include tablet {
      display: none;
    }
  }

  &__search-icon--mobile {
    display: flex;
    @include block-item(2.8rem, 2.75rem);
    min-width: 2.8rem;
    background: $button-light-gradient;
    border: .1rem solid $neutral-white;
    border-radius: .35rem;
    box-shadow: $shadow-primary;

    @include tablet {
      display: none;
    }
  }

  &__magnifying-glass--mobile {
    display: block;
    left: .8rem;
    position: relative;
    top: .65rem;

    @include tablet {
      display: none;      
    }
  }

  &__icon-container--mobile {
    display: block;
    @include block-item(1.5rem, 1.875rem);
    left: -.4375rem;
    position: relative;

    @include tablet {
      display: none;
    }
  }

  &__search-vector--mobile {
    display: block;
    @include block-item(1.1rem, 1.1rem);
    position: absolute;
    top: .625rem;

    @include tablet {
      display: none;      
    }
  }

  &__search-ellipse--mobile {
    display: block;
    @include block-item(.8rem, .8rem);
    border: .1094rem solid;
    border-color: $neutral-white;
    border-radius: .5rem;
    box-shadow: $shadow-primary;
    left: .625rem;
    position: absolute;

    @include tablet {
      display: none;      
    }
  }

  &__search-content--mobile {
    display: flex;
    width: 100%;
    align-items: flex-start;
    align-self: stretch;
    flex-direction: column;
    flex-grow: 1;
    gap: .125rem;
    justify-content: center;

    @include tablet {
      display: none;
    }
  }

  &__search--mobile {
    display: block;
    font-family: $primary-font;
    width: 100%;
    font-size: .875rem;
    font-weight: 400;
    padding: .25rem;
    outline: none;
    border: none;
    color: $primary-light-blue;

    @include tablet {
      display: none;
    }

    &::placeholder {
      color: $primary-light-blue;
    }

    &:focus {
      color: $primary-dark-blue;
      background-color: $neutral-white; 
      border-radius: .35rem;
      box-shadow: $shadow-senary; 
    }
  }

  &__search-input--mobile {
    width: 100%;
  }

  &__form-mobile {
    width: 100%;
  }

  a,
  a:hover,
  a:visited,
  a:active {
    text-decoration: none;
  }
}

